# pde-solver

./: .gitignore  LICENSE  README.md  performance.md
pde-solver/: CMakeLists.txt  ioutils.cpp  ioutils.h  main.cpp  matrixutils.cpp  matrixutils.h  pdesolver.cpp  pdesolver.h  plotutils.h  prova_csv.cpp  solver.cpp  solver.h  test.cpp
